--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -181,38 +181,30 @@ header {
 .nav-option {
   width: 250px;
   height: 60px;
+  text-decoration: none;
   display: flex;
   align-items: center;
   padding: 0 30px 0 20px;
   gap: 20px;
   transition: all 0.1s ease-in-out;
+  cursor: pointer;
 }
+
 .nav-option:hover {
   border-left: 5px solid #a2a2a2;
   background-color: #dadada;
-  cursor: pointer;
-}
-.nav-img {
-  height: 30px;
-}
-
-.nav-upper-options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
 }
 
 .option1 {
   border-left: 5px solid #010058af;
   background-color: var(--Border-color);
   color: white;
-  cursor: pointer;
 }
+
 .option1:hover {
-  border-left: 5px solid #010058af;
   background-color: var(--Border-color);
 }
+
 .box {
   height: 130px;
   width: 230px;
