--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -2,44 +2,37 @@
     <nav class="nav">
         <div class="nav-upper-options">
             <div class="nav-option option1">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210182148/Untitled-design-(29).png"
-                    class="nav-img" alt="dashboard">
-                <h3> Dashboard</h3>
+                <img src="https://fonts.gstatic.com/s/i/materialicons/dashboard/v6/24px.svg" class="nav-img" alt="dashboard">
+                <h3>Dashboard</h3>
             </div>
 
-            <a href="/users/manage-user" class="option2 nav-option">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/9.png" class="nav-img"
-                    alt="articles">
-                <h3> Manage User</h3>
+            <a href="/users/manage-user" class="nav-option option2">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
+                <h3>User Management</h3>
             </a>
 
             <div class="nav-option option3">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/5.png" class="nav-img"
-                    alt="report">
-                <h3> Report</h3>
+                <img src="https://fonts.gstatic.com/s/i/materialicons/description/v7/24px.svg" class="nav-img" alt="orders">
+                <h3>Order Tracking</h3>
             </div>
 
             <div class="nav-option option4">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/6.png" class="nav-img"
-                    alt="institution">
-                <h3> Institution</h3>
+                <img src="https://fonts.gstatic.com/s/i/materialicons/restaurant/v7/24px.svg" class="nav-img" alt="dishes">
+                <h3>Dish List</h3>
             </div>
 
             <div class="nav-option option5">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183323/10.png" class="nav-img"
-                    alt="blog">
-                <h3> Profile</h3>
+                <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
+                <h3>Inventory Storage</h3>
             </div>
 
             <div class="nav-option option6">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/4.png" class="nav-img"
-                    alt="settings">
-                <h3> Settings</h3>
+                <img src="https://fonts.gstatic.com/s/i/materialicons/settings/v7/24px.svg" class="nav-img" alt="settings">
+                <h3>Settings</h3>
             </div>
 
-            <div class="nav-option logout">
-                <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/7.png" class="nav-img"
-                    alt="logout">
+            <div class="nav-option option7">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/logout/v6/24px.svg" class="nav-img" alt="logout">
                 <h3>Logout</h3>
             </div>
         </div>
