hot fix: ES module of JS

--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -7,7 +7,8 @@
                 <h3> Dashboard</h3>
             </div>
 
-            <a href="/users/manage-user" class="option2 nav-option">
+            <!-- ae thay đường dẫn ở đây nha -->
+            <a href="/retrieve-users" class="option2 nav-option">
                 <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/9.png" class="nav-img"
                     alt="articles">
                 <h3> Manage User</h3>
