--- a/src/views/user/manage-user.ejs
+++ b/src/views/user/manage-user.ejs
@@ -1,16 +1,33 @@
-    <table>
+<h1>
+    <%= title %>
+</h1>
+<table>
+    <thead>
         <tr>
-            <th> Employee </th>
-            <th> Salary </th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Salary</th>
         </tr>
-
-        <% empSalary.forEach(emp=> { %>
-            <tr>
-                <td>
-                    <%= emp.name %>
-                <td>
-                    <%= emp.salary %>
-            </tr>
-            <% }); %>
-
-    </table>
+    </thead>
+    <tbody>
+        <% if (users && users.length> 0) { %>
+            <% users.forEach(user=> { %>
+                <tr>
+                    <td>
+                        <%= user.name %>
+                    </td>
+                    <td>
+                        <%= user.email %>
+                    </td>
+                    <td>
+                        <%= user.salary %>
+                    </td>
+                </tr>
+                <% }) %>
+                    <% } else { %>
+                        <tr>
+                            <td colspan="3">No users found</td>
+                        </tr>
+                        <% } %>
+    </tbody>
+</table>
