Added form-add-user, modified manage-user, user controller and service,... and completed Add new User, Get all user.

--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -6,7 +6,7 @@
                 <h3>Dashboard</h3>
             </div>
 
-            <a href="/users/manage-user" class="nav-option option2">
+            <a href="/users" class="nav-option option2">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
                 <h3>User Management</h3>
             </a>
