--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -6,11 +6,6 @@
                 <h3>Dashboard</h3>
             </div>
 
-            <a href="/users" class="nav-option option2">
-                <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
-                <h3>User Management</h3>
-            </a>
-
             <div class="nav-option option3">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/description/v7/24px.svg" class="nav-img" alt="orders">
                 <h3>Order Tracking</h3>
@@ -25,6 +20,16 @@
                 <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
                 <h3>Inventory Storage</h3>
             </div>
+
+            <a href="/users" class="nav-option option2">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
+                <h3>User Management</h3>
+            </a>
+
+            <a href="/users" class="nav-option option2">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/work/v7/24px.svg" class="nav-img" alt="users">
+                <h3>Work Schedules</h3>
+            </a>
 
             <div class="nav-option option6">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/settings/v7/24px.svg" class="nav-img" alt="settings">
