--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -183,6 +183,7 @@ header {
   height: 60px;
   text-decoration: none;
   display: flex;
+  color: #777;
   align-items: center;
   padding: 0 30px 0 20px;
   gap: 20px;
@@ -195,14 +196,14 @@ header {
   background-color: #dadada;
 }
 
-.option1 {
+.selected {
   border-left: 5px solid #010058af;
-  background-color: var(--Border-color);
+  background-color:  #7a33c7;
   color: white;
 }
 
-.option1:hover {
-  background-color: var(--Border-color);
+.selected:hover {
+  background-color:#6a33b3;
 }
 
 .box {
