--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -1,45 +1,45 @@
 <div class="navcontainer">
     <nav class="nav">
         <div class="nav-upper-options">
-            <div class="nav-option option1">
+            <a href="/test" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/dashboard/v6/24px.svg" class="nav-img" alt="dashboard">
                 <h3>Dashboard</h3>
-            </div>
+            </a>
 
-            <div class="nav-option option3">
+            <a href="/orders" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/description/v7/24px.svg" class="nav-img" alt="orders">
                 <h3>Order Tracking</h3>
-            </div>
+            </a>
 
-            <div class="nav-option option4">
+            <a href="" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/restaurant/v7/24px.svg" class="nav-img" alt="dishes">
                 <h3>Dish List</h3>
-            </div>
+            </a>
 
-            <div class="nav-option option5">
+            <a href="" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
                 <h3>Inventory Storage</h3>
-            </div>
+            </a>
 
-            <a href="/users" class="nav-option option2">
+            <a href="/users" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
                 <h3>User Management</h3>
             </a>
 
-            <a href="/users" class="nav-option option2">
-                <img src="https://fonts.gstatic.com/s/i/materialicons/work/v7/24px.svg" class="nav-img" alt="users">
+            <a href="/users" class="nav-option">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/work/v7/24px.svg" class="nav-img" alt="schedules">
                 <h3>Work Schedules</h3>
             </a>
 
-            <div class="nav-option option6">
+            <a href="" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/settings/v7/24px.svg" class="nav-img" alt="settings">
                 <h3>Settings</h3>
-            </div>
+            </a>
 
-            <div class="nav-option option7">
+            <a href="" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/logout/v6/24px.svg" class="nav-img" alt="logout">
                 <h3>Logout</h3>
-            </div>
+            </a>
         </div>
     </nav>
 </div>
