--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -606,4 +606,319 @@
       }
   }
 }
+ /* MANAGE DISH */
+ .manager-dish{
+  min-width: 1000px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
 
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+   .action-buttons {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+   .action-buttons .button-add {
+    padding: 10px 15px;
+    background-color: #2196F3;
+    border: none;
+    color: white;
+    font-size: 14px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  
+   .action-buttons .button-add a {
+    color: white;
+    text-decoration: none;
+  }
+  
+   table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+   th,  td {
+    padding: 12px;
+    text-align: center;
+    border: 1px solid #ddd;
+  }
+  
+   th {
+    background-color: #f2f2f2;
+  }
+  
+   tr:hover {
+    background-color: #f1f1f1;
+  }
+
+   .button-update,  .button-delete {
+    padding: 8px 12px;
+    margin: 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  
+   .button-update {
+    background-color: #a3a302;
+  }
+  
+   .button-update a,
+   .button-delete a {
+    color: white;
+    text-decoration: none;
+  }
+  
+   .button-update:hover {
+    background-color: #8a9c01;
+  }
+  
+   .button-delete {
+    background-color: #e45d53;
+  }
+  
+   .button-delete:hover {
+    background-color: #c33636;
+  }
+
+   .button-add:hover {
+    background-color: #1E88E5;
+  }
+  
+   .table-wrapper {
+    background: #fff;
+    padding: 20px 25px;
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+  }
+  
+   .table-title {
+    padding-bottom: 15px;
+    background: #435d7d;
+    color: #fff;
+    padding: 16px 30px;
+    margin: -20px -25px 10px;
+    border-radius: 3px 3px 0 0;
+  }
+  
+   .table-title h2 {
+    margin: 5px 0 0;
+    font-size: 24px;
+  }
+  
+   .table-title .btn-group {
+    float: right;
+  }
+  
+   .table-title .btn {
+    color: #fff;
+    float: right;
+    font-size: 13px;
+    border: none;
+    min-width: 50px;
+    border-radius: 2px;
+    margin-left: 10px;
+  }
+  
+   .table-title .btn i {
+    font-size: 21px;
+    margin-right: 5px;
+  }
+  
+   table.table tr th,  table.table tr td {
+    border-color: #e9e9e9;
+    padding: 12px 15px;
+    vertical-align: middle;
+  }
+  
+   table.table tr th:first-child {
+    width: 60px;
+  }
+  
+   table.table tr th:last-child {
+    width: 100px;
+  }
+  
+   table.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fcfcfc;
+  }
+  
+   table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+  }
+  
+   table.table td a {
+    font-weight: bold;
+    color: #566787;
+    display: inline-block;
+    text-decoration: none;
+    outline: none !important;
+  }
+  
+   table.table td a:hover {
+    color: #2196F3;
+  }
+  
+   table.table td a.edit {
+    color: #FFC107;
+  }
+  
+   table.table td a.delete {
+    color: #F44336;
+  }
+  
+   table.table td i {
+    font-size: 19px;
+  }
+  
+   table.table .avatar {
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 10px;
+  }
+  
+   .pagination {
+    float: right;
+    margin: 0 0 5px;
+  }
+  
+   .pagination li a {
+    border: none;
+    font-size: 13px;
+    min-width: 30px;
+    min-height: 30px;
+    color: #999;
+    margin: 0 2px;
+    line-height: 30px;
+    border-radius: 2px !important;
+    text-align: center;
+    padding: 0 6px;
+  }
+  
+   .pagination li a:hover {
+    color: #666;
+  }
+  
+   .pagination li.active a,  .pagination li.active a.page-link {
+    background: #03A9F4;
+  }
+  
+   .pagination li.active a:hover {
+    background: #0397d6;
+  }
+  
+   .pagination li.disabled i {
+    color: #ccc;
+  }
+  
+   .pagination li i {
+    font-size: 16px;
+    padding-top: 6px;
+  }
+  
+   .hint-text {
+    float: left;
+    margin-top: 10px;
+    font-size: 13px;
+  }
+}
+
+/* FORM ADD DISH */
+.container-form-add-dish {
+  margin: 20px auto;
+  /* padding: 20px; */
+  .form-add-dish {
+      min-width: 1000px;
+      margin: 20px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      background-color: #f9f9f9;
+  
+      h2 {
+          text-align: center;
+          color: #333;
+          font-size: 24px;
+          margin-bottom: 20px;
+      }
+
+      /* Container for the form fields */
+      div {
+          margin-bottom: 15px;
+
+          label {
+              display: block;
+              margin-bottom: 5px;
+              font-weight: bold;
+              color: #555;
+          }
+
+          /* Form inputs (text, select, etc.) */
+          input[type="text"],
+          input[type="number"]
+          select {
+              width: 100%;
+              padding: 10px;
+              border: 1px solid #ccc;
+              border-radius: 4px;
+              font-size: 14px;
+              box-sizing: border-box; /* Prevents box from overflowing */
+          }
+
+          /* Additional spacing for select inputs */
+          select {
+              cursor: pointer;
+          }
+      }
+
+      /* Submit Button */
+      button[type="submit"] {
+          margin-top: 20px;
+          padding: 10px;
+          width: 100%;
+          background-color: #4CAF50;
+          color: white;
+          border: none;
+          border-radius: 4px;
+          font-size: 16px;
+          cursor: pointer;
+
+          &:hover {
+              background-color: #45a049;
+          }
+      }
+  }
+
+  /* Return Button */
+  .return-buttons {
+      margin-bottom: 15px;
+
+      a {
+          text-decoration: none;
+          background-color: #ed9f0e;
+          padding: 8px 12px;
+          margin: 5px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+          color: white;
+          font-size: 14px;
+
+          &:hover {
+              background-color: #db8a07;
+          }
+      }
+  }
+}
