Add 404 page, Add Login Form

--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="navcontainer">
     <nav class="nav">
         <div class="nav-upper-options">
-            <a href="/test" class="nav-option">
+            <a href="/dashboard" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/dashboard/v6/24px.svg" class="nav-img" alt="dashboard">
                 <h3>Dashboard</h3>
             </a>
@@ -11,7 +11,7 @@
                 <h3>Order Tracking</h3>
             </a>
 
-            <a href="" class="nav-option">
+            <a href="/dishes" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/restaurant/v7/24px.svg" class="nav-img" alt="dishes">
                 <h3>Dish List</h3>
             </a>
