--- a/src/views/order/form-add-order.ejs
+++ b/src/views/order/form-add-order.ejs
@@ -8,7 +8,7 @@
     <div class="form-add-order">
         <h2><%= title %></h2>
 
-        <form action="/add-order" method="POST">
+        <form action="/orders/add-order" method="POST">
             <!-- Staff In Charge -->
             <div>
                 <label for="staff_in_charge">Staff In Charge:</label>
