--- a/src/views/user/form-add-user.ejs
+++ b/src/views/user/form-add-user.ejs
@@ -6,7 +6,7 @@
         <h2>
             <%= title %>
         </h2>
-        <form action="/add-user" method="POST">
+        <form action="/users/add-user" method="POST">
             <div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
