--- a/src/views/user/form-edit-user.ejs
+++ b/src/views/user/form-edit-user.ejs
@@ -6,7 +6,7 @@
         <h2>
             <%= title %>
         </h2>
-    <form action="/update-user" method="POST">
+    <form action="/users/update-user" method="POST">
         <input type="hidden" name="_id" value="<%= user.id %>">
         <div>
             <label for="name">Name:</label>
