--- a/src/views/user/manage-user.ejs
+++ b/src/views/user/manage-user.ejs
@@ -5,7 +5,7 @@
     </h1>
     <div class="action-buttons">
         <button class="button-add">
-            <a href="/add-user">Add new User</a>
+            <a href="users/add-user">Add new User</a>
         </button>
     </div>
     <table>
@@ -15,7 +15,7 @@
                 <th>Username</th>
                 <th>Email</th>
                 <th>Status</th>
-                <th>Role</th>
+                <th>Role</th>   
                 <th>Actions</th>
             </tr>
         </thead>
@@ -40,7 +40,7 @@
                         </td>
                         <td>
                             <button class="button-update">
-                                <a href="/edit-user/<%= user.id %>" class="button-update">Update</a>
+                                <a href="users/edit-user/<%= user.id %>" class="button-update">Update</a>
                             </button>
                         </td>
                     </tr>
