--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -15,6 +15,10 @@
                 <img src="https://fonts.gstatic.com/s/i/materialicons/restaurant/v7/24px.svg" class="nav-img" alt="dishes">
                 <h3>Dish List</h3>
             </a>
+            <a href="/payment" class="nav-option">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/restaurant/v7/24px.svg" class="nav-img" alt="dishes">
+                <h3>Payment</h3>
+            </a>
 
             <a href="" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
