add inventory: model, controller, route, service, 3 forms. edit sidebar

--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -20,7 +20,7 @@
                 <h3>Payment</h3>
             </a>
 
-            <a href="" class="nav-option">
+            <a href="/manage-inventory" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
                 <h3>Inventory Storage</h3>
             </a>
