--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -20,8 +20,8 @@
                 <h3>Payment</h3>
             </a>
 
-            <a href="/manage-inventory" class="nav-option">
-                <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventory">
+            <a href="/inventories" class="nav-option">
+                <img src="https://fonts.gstatic.com/s/i/materialicons/inventory/v7/24px.svg" class="nav-img" alt="inventories">
                 <h3>Inventory Storage</h3>
             </a>
 
