--- a/src/views/inventory/form-add-inventory.ejs
+++ b/src/views/inventory/form-add-inventory.ejs
@@ -1,12 +1,12 @@
 <div class="container-form-add-user">
     <div class="return-buttons">
-        <a href="/manage-inventory">Return</a>
+        <a href="/inventories">Return</a>
     </div>
     <div class="form-add-user">
         <h2>
             Add New Inventory Item
         </h2>
-        <form action="/inventory" method="POST">
+        <form action="/add-inventory" method="POST">
             <div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
