--- a/src/views/inventory/form-edit-inventory.ejs
+++ b/src/views/inventory/form-edit-inventory.ejs
@@ -1,12 +1,13 @@
 <div class="container-form-add-user">
     <div class="return-buttons">
-        <a href="/manage-inventory">Return</a>
+        <a href="/inventories">Return</a>
     </div>
     <div class="form-add-user">
         <h2>
             Edit Inventory Item
         </h2>
-        <form action="/inventory/<%= item._id %>" method="POST">
+        <form action="/inventories/update-inventory/<%= item._id %>" method="POST">
+            <input type="hidden" name="id" value="<%= item._id %>">        
             <div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" value="<%= item.name %>" required>
