--- a/src/views/inventory/form-add-inventory.ejs
+++ b/src/views/inventory/form-add-inventory.ejs
@@ -6,7 +6,7 @@
         <h2>
             Add New Inventory Item
         </h2>
-        <form action="/add-inventory" method="POST">
+        <form action="/inventories/add-inventory" method="POST">
             <div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
