Completed Work Schedule include: add/update schedule, evaluate staff,...

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -160,8 +160,6 @@ body {
             margin-bottom: 20px;
             text-align: center;
         }
-
-
 }
 
 /* FORM ADD USER */
@@ -233,6 +231,28 @@ body {
                 font-size: 14px;
             }
         }
+    input[type="date"]{
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+    textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
 }
 
  /* MANAGE ORDER */
