--- a/src/views/layouts/sidebar.ejs
+++ b/src/views/layouts/sidebar.ejs
@@ -27,10 +27,10 @@
 
             <a href="/users" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/person/v7/24px.svg" class="nav-img" alt="users">
-                <h3>User Management</h3>
+                <h3>Staff</h3>
             </a>
 
-            <a href="/users" class="nav-option">
+            <a href="/work-schedules" class="nav-option">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/work/v7/24px.svg" class="nav-img" alt="schedules">
                 <h3>Work Schedules</h3>
             </a>
