--- a/src/views/user/form-edit-user.ejs
+++ b/src/views/user/form-edit-user.ejs
@@ -22,7 +22,7 @@
         </div>
         <div>
             <label for="status">Status:</label>
-            <input type="text" id="status" name="status" value="<%= user.status %>" required><br>
+            <input type="number" id="status" name="status" value="<%= user.status %>" required><br>
         </div>
         <div>
             <label for="role">Role:</label>
