--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -9,6 +9,7 @@
     <title><%- title %></title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/table_schedule.css">
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 
