Add JWT auth, Update Order, Add Table Service

--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,7 +1,9 @@
-<div class="main">
-    <div class="report-container">
-        <div class="report-body">
+<%- include('layouts/partials/header'); -%>
+
+<div class="login-page">
+        <h1 style="text-align: center;">
             OOPS, page not found :)
-        </div>
+        </h1>
     </div>
 </div>
+
