--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -35,6 +35,9 @@
         <div class="message">
             <div class="circle"></div>
             <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/8.png" class="icn" alt="">
+            <% if (user) { %>
+                Welcome, <%= user.name %>
+              <% } %>
             <div class="dp">
                 <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
                     class="dpicn" alt="dp">
@@ -52,6 +55,7 @@
 
     <script src="/js/sidebar.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/order/add-order.js"></script>
 </body>
 
 </html>
