--- a/src/views/order/manage-order.ejs
+++ b/src/views/order/manage-order.ejs
@@ -74,6 +74,9 @@
                         <td>
                             <!-- Action Buttons -->
                             <button class="button-update">
+                                <a href="payment/order-detail-pay/<%= order._id %>" title="Payment this order">Pay</a>
+                            </button>
+                            <button class="button-update">
                                 <a href="orders/update-order/<%= order._id %>" title="Update this order">Update</a>
                             </button>
                             <button class="button-delete">
