--- a/src/views/payment/form-payment.ejs
+++ b/src/views/payment/form-payment.ejs
@@ -4,26 +4,32 @@
             <%= title %>
         </h1>
     </div>
-    <form action="#" method="POST">
-        <div class="form-group">
-            <label for="card-number">Card Number</label>
-            <input type="text" id="card-number" name="card-number" placeholder="1234 5678 9012 3456" required>
+    <div class="container-payment">
+      <% orders.forEach((order) => { %>
+      <div class="order">
+        <div class="order-summary">
+          <h2>Order ID: <span><%= order._id %></span></h2>
+          <p>Staff in Charge: <span><%= order.staff_in_charge.name %></span></p>
+          <p>Status: <span class="status"><%= order.status %></span></p>
+          <p>Total Amount: <span>$<%= order.total_amount.toFixed(2) %></span></p>
         </div>
-        <div class="form-group">
-            <label for="card-holder">Card Holder Name</label>
-            <input type="text" id="card-holder" name="card-holder" placeholder="John Doe" required>
+  
+        <h3>Order Items</h3>
+        <div class="order-items">
+          <% order.details.forEach((item) => { %>
+          <div class="item">
+            <p><strong>Dish:</strong> <%= item.dish.name %></p>
+            <p><strong>Price:</strong> $<%= item.dish.price.toFixed(2) %></p>
+            <p><strong>Quantity:</strong> <%= item.quantity %></p>
+            <p><strong>Subtotal:</strong> $<%= (item.dish.price * item.quantity).toFixed(2) %></p>
+          </div>
+          <% }); %>
         </div>
-        <div class="form-group">
-            <label for="expiry-date">Expiry Date</label>
-            <input type="text" id="expiry-date" name="expiry-date" placeholder="MM/YY" required>
-        </div>
-        <div class="form-group">
-            <label for="cvv">CVV</label>
-            <input type="number" id="cvv" name="cvv" placeholder="123" required>
-        </div>
-        <button type="submit" class="submit-button">Pay Now</button>
-    </form>
-    <div class="note">
-        <p>Your payment is secure and encrypted.</p>
-    </div>
+      </div>
+      <form action="/payment/pay-with-cash" method="POST" id="payWithCashForm">
+        <input type="hidden" name="orderId" value="<%= order._id %>" />
+        <button type="submit" class="pay-now">Pay with cash</button>
+      </form>
+          <button class="pay-now zalopay">Pay By Zalo</button>
+      <% }); %>
 </div>
