--- a/src/public/css/table_schedule.css
+++ b/src/public/css/table_schedule.css
@@ -40,3 +40,37 @@
 .button-performance-appraisal:hover {
     background-color: #107dac !important;
 }
+
+
+/* VNPAY RETURN URL */
+
+.container-vnp-transaction-result {
+    min-width: 1000px;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    text-align: center;
+}
+
+.container-vnp-transaction-result p {
+    font-size: 18px;
+    color: #005aa9;
+    margin-bottom: 20px;
+}
+
+.back-to-orders {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.back-to-orders:hover {
+    background-color: #0056b3;
+}
