fix zalopayPayment and re-css button delete in inventory

--- a/src/views/inventory/manage-inventory.ejs
+++ b/src/views/inventory/manage-inventory.ejs
@@ -42,7 +42,7 @@
                                 <a href="inventories/edit-inventory/<%= inventory.id %>" class="button-update">Update</a>
                             </button>
                             <form action="/inventories/delete-inventory/<%= inventory._id %>" method="POST" style="display:inline;">
-                                <button type="submit" class="button-delete">Delete</button>
+                                <button type="submit" class="button-delete-inventory">Delete</button>
                             </form>
                         </td>
                     </tr>
